# gemini

./: .gitignore  CLAUDE.md  README.md  nx.json  package-lock.json  package.json  plan-llmBackendSwitching.prompt.md
.ai/: chat-template.md  frontend-fixes-plan.md  plan-aiAssistedInputAndScenarioGeneration.prompt.md  plan-llamaChatStoryMode.prompt.md  plan-llmBackendSwitching.prompt.md  refactoring-handover.md  repo-improvements.md
.claude/: CLAUDE.md  HANDOVER.md  settings.json
.claude/plans/: adventure-world-state-roadmap.md  fix-angular21-tests.md  storage-analysis.md  world-state-phase4-and-phase3.md
.obsidian/: graph.json  workspace.json
apps/llama-chat/: eslint.config.mjs  jest.config.cts  project.json  proxy.conf.json
apps/llama-chat-e2e/: playwright.config.ts  project.json
apps/llama-chat/src/: index.html  styles.scss
apps/llama-proxy/: .env.example  config.py  json_utils.py  llm.py  main.py  models.py  project.json  prompts.py  pyproject.toml
apps/llama-proxy/routes/: backends.py  chat.py  generate.py
apps/llm/: project.json
apps/nx-monorepo-experiment/: jest.config.cts  project.json
apps/nx-monorepo-experiment-e2e/: playwright.config.ts  project.json
docs/raw/: plan-autoStartStoryIntro.prompt.md  plan-dungeonMasterMode.prompt.md  plan-interpersonalScenarioType.prompt.md  plan-llamaChatAndProxy.prompt.md  plan-streamingLlmResponses.prompt.md
docs/wiki/: index.md  log.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
project/wiki/: index.md  log.md
scripts/: start-llm.sh
(+59 files in other folders)
